@@ -1,3 +1,11 @@
+2008-03-01  Jens Granseuer  <jensgr@gmx.net>
+
+	* gnome-keyboard-properties-a11y.c:
+	(notifications_button_clicked_cb),
+	(mousekeys_accel_time_to_widget),
+	(mousekeys_accel_time_from_widget), (setup_a11y_tabs): fix leaks
+	and remove unnecessary casts
+
 2008-02-05  Jens Granseuer  <jensgr@gmx.net>
 
 	* gnome-keyboard-properties.glade: don't mark padding strings as
